<resources>
    <string name="app_name1">Bike Buddy</string>
    <string name="title_activity_first_page_bottom">first_page_bottom</string>

    <string name="title_explore">Explore</string>
    <string name="title_trail">Start Ride</string>
    <string name="title_book">Book</string>
    <string name="title_guide">Guide</string>
    <string name="title_home">Me</string>

    <string name="title_activity_first_page_map">Map</string>

    <string name="title_activity_front_page">Front_page</string>
    <string name="title_activity_trail_map">Map</string>

    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>

    //For TrackerService
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_email" translatable="false">mhansica@gmail.com</string>
    <string name="firebase_password" translatable="false">123456789</string>

    //Displaying the current location
    <string name="title_activity_display">Transport Display</string>
    <string name="firebase_path1" translatable="false">locations1</string>
    //
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="firebase_path">location</string>


    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE RIDING</string>
    <string name="backdrop_subtitle">Have a chance to explore our Inventory</string>
    <string name="title_activity_track_map">Map</string>
    <string name="title_activity_track_location_now">TrackLocationNow</string>


</resources>
